--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,5 +4,5 @@
   --color-grey: #717171; 
   --color-black: #263238;
   --color-def-black: #000000;
-  --color-dull-white: #e7e4f0;
+  --color-dull-white: #e9e9e980;
 }
